Lade upp det som ska fixas till fredag

--- a/README
+++ b/README
@@ -2,3 +2,13 @@ Readme:
 
 API Documentation:
 http://www.ida.liu.se/~TDP003/portfolio-api/
+
+FIXA TILL FREDAG:
+Skissa upp:
+  /
+  /list
+  /project/id
+  /techniques
+Tidsuppfattning:
+  datalager
+  hemsida
