Update README - made a readme-skeleton for later Also checking if it looks the same as a github readme

--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-Readme:
+Olle & Maija Portfolio
+======================
 
-API Documentation:
-http://www.ida.liu.se/~TDP003/portfolio-api/
+### About
+Blah blah blaah blah blah
 
-FIXA TILL FREDAG:
-Skissa upp:
-  /
-  /list
-  /project/id
-  /techniques
-Tidsuppfattning:
-  datalager
-  hemsida
+### Installation
+Blah blah blaaah
+    blah code blah code code
+    coding coding blah
+    more code
+blah normal text blah
+
+### But wait.. there's more!
+blaha!
